# DigitalCircuit

./: CMakeLists.txt  README.md
include/: Component.hpp  GhostLabel.hpp  Window.hpp
include/components/: ANDgate.hpp  Lamp.hpp  NANDgate.hpp  NORgate.hpp  NOTgate.hpp  ORgate.hpp  Switch.hpp  XNORgate.hpp  XORgate.hpp
src/: Component.cpp  Window.cpp  main.cpp
ui/: Component.ui  Window.ui
ui/assets/: README.md  resources.qrc
